--- a/assets/styles/toc.css
+++ b/assets/styles/toc.css
@@ -48,12 +48,12 @@ header > nav > ul {
 main {
   width: 80%;
   margin: auto;
+  padding-bottom: 160px;
 }
 #toc {
   background-color: #191919;
-
   border-radius: 24px;
-  padding: 40px 55px;
+  padding: 40px 55px 60px 55px;
 }
 #toc-section-header {
   height: 30px;
@@ -139,6 +139,7 @@ p {
     /* justify-content: space-between; */
     align-items: center;
     padding: 28px 60px;
+    margin-top: 70px;
 }
 #red-line{
     background-color: #D21717;
