--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -1,4 +1,7 @@
-@media (max-width: 700px) {
+@media (max-width: 780px) {
+  #main{
+    padding-bottom: 140px;
+  }
   header {
     height: 75px;
     padding: 0 30px;
@@ -67,6 +70,7 @@
   #download-card-m-content span{
     font-size: 18px;
     line-height: 21.6px;
+    font-family: formula-reg;
   }
 
   #download-options-wrapper-m{
@@ -241,7 +245,6 @@
   footer {
     max-height: 560px;
     height: auto;
-    margin-top: 140px;
     position: relative;
   }
   #footer-img {
@@ -280,6 +283,21 @@
     width: 100%;
     border-radius: 16px;
     background-color: #0a0a0a;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+  #footer-card-header-m-logo img{
+    width: 45px;
+  }
+  #footer-card-hearer-text{
+    margin-left: 15px;
+    font-size: 14px;
+  }
+  #footer-card-hearer-text-heading{
+    display: block;
+    font-size: 18px;
   }
   #footer-card p{
       font-size: 16px;
@@ -299,10 +317,18 @@
   }
   #footer-subcard-logo{
     height: 70px;
-    width: 70px;
+    min-width: 70px;
     background-color: #ffffff;
     border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
   }
+  #footer-subcard-logo img{
+    height: 32px;
+  }
+
   #footer-subcard-content h4{
     font-size: 20px;
     line-height: 24px;
@@ -311,5 +337,24 @@
   #footer-subcard-content p{
     font-size: 16px;
     font-weight: 200;
+    font-family: formula-reg;
+    max-width: 200px;
+    margin-top: 8px;
+  }
+  #download-card-m-content h2{
+    position: relative;
+    padding-left: 25px;
+  }
+  #download-card-m-content h2::before{
+    content: "";
+    display: block;
+    height: 84px;
+    width: 8px;
+    border-radius: 2px;
+    background-color: #0a0a0a;
+    position: absolute;
+    left: 0;
+    top: 2px;
+    
   }
 }
