--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -381,9 +381,12 @@ main {
 
 /* footer */
 footer {
-  max-height: 250px;
+  height: 250px;
   overflow: hidden;
   position: relative;
+  background-image: url(../images/footer.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 #footer-img {
   width: 100%;
@@ -405,6 +408,7 @@ footer {
   height: 200px;
   padding-top: 40px;
   display: flex;
+  gap: 2rem;
   justify-content: space-between;
 }
 #footer-content-logo-wrapper {
@@ -415,6 +419,7 @@ footer {
 #pm-text small {
   display: block;
   font-size: 20px;
+  font-family: formula-bold;
 }
 #pm-text span {
   display: block;
@@ -485,19 +490,22 @@ footer {
   align-items: center;
   padding: 20px;
   box-sizing: border-box;
-  gap: 15px;
 }
 #subcard-footer-logo {
   width: 45px;
 }
 #subcard-footer-text-heading {
   font-size: 20px;
+  display: block;
 }
 #subcard-footer-text {
   font-size: 14px;
+  margin-left: 15px;
 }
 #subcard-footer-arrow {
   width: 35px;
+  display: block;
+  margin-left: auto;
 }
 /* media queries */
 
@@ -604,6 +612,42 @@ footer {
   #final-content-wrapper {
     width: 80%;
     gap: 80px;
+  }
+  #pm-card {
+    width: 90%;
+    margin-left: auto;
+  }
+  #pm-nav {
+    margin-bottom: 30px;
+    width: 90%;
+    margin-left: auto;
+
+    gap: 0.8rem;
+  }
+  #pm-subcard {
+    padding: 10px;
+    width: 80%;
+  }
+  .pm-nav-items {
+    font-size: 16px;
+    word-break: break-all;
+  }
+  #subcard-footer-text-heading {
+    font-size: 16px;
+  }
+  #subcard-footer-logo {
+    width: 35px;
+  }
+  #pm-text small {
+    font-size: 18px;
+  }
+  #pm-text span {
+    font-size: 14px;
+  }
+}
+@media (max-width: 820px) {
+  #pm-nav {
+    width: 95%;
   }
 }
 @media (max-width: 1000px) {
