--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -115,14 +115,28 @@ header>nav>ul {
 #card-content {
   display: flex;
   align-items: center;
-  width: 90%;
+  width: 100%;
   justify-content: space-between;
   position: absolute;
 }
 
+.fantasy {
+  display: flex;
+  width: 25rem;
+  align-items: center;
+}
+
+.side-line {
+  height: 90px;
+  width: 15px;
+  background-color: #0a0a0a;
+  margin-left: 4rem;
+  margin-right: 1rem;
+}
+
 #card-content>h2 {
   /* position: absolute; */
-  margin-left: 1rem;
+  margin-left: -6rem;
   width: 19rem;
 }
 
@@ -131,11 +145,66 @@ header>nav>ul {
   gap: 2rem;
 }
 
+.fant-div {
+  background-color: #0a0a0a;
+  height: 100%;
+  border-radius: 16px;
+  padding: 0;
+}
+
+.right-up {
+  height: 2.5rem;
+  width: 9rem;
+  position: absolute;
+  margin-left: 52rem;
+  margin-top: -8rem;
+  border-style: solid solid none none;
+  border-color: white;
+  border-width: 1px;
+  /* border-radius: 8px; */
+  border-top-right-radius: 8px 8px;
+  background-color: transparent;
+}
+
+.left-btm {
+  height: 5rem;
+  width: 7rem;
+  position: absolute;
+  margin-left: -54rem;
+  margin-top: 5.2rem;
+  border-style: none none solid solid;
+  border-color: red;
+  border-width: 1px;
+  /* border-radius: 8px; */
+  border-bottom-left-radius: 8px 8px;
+  background-color: transparent;
+}
+
+.right-btm {
+  height: 5.7rem;
+  width: 41rem;
+  position: absolute;
+  margin-left: 20rem;
+  margin-top: 4.5rem;
+  border-style: none solid solid none;
+  border-color: red;
+  border-width: 1px;
+  /* border-radius: 8px; */
+  border-bottom-right-radius: 8px 8px;
+  background-color: transparent;
+}
+
+.right-outer {
+  margin-left: 22rem;
+  margin-top: 6rem;
+}
+
 .play-store {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-end;
+  margin-right: 3.8rem;
 }
 
 .wait-text {
@@ -144,6 +213,10 @@ header>nav>ul {
 }
 
 .download-options {
+  height: 60px;
+}
+
+.download-options2 {
   height: 60px;
 }
 
@@ -687,6 +760,10 @@ footer {
   font-family: formula-reg;
 }
 
+.foot-msg {
+  color: white;
+}
+
 #pm-logo {
   height: 80px;
   width: 80px;
@@ -811,9 +888,33 @@ footer {
   .earn-div {
     font-size: 2rem;
   }
+
+  .port-text {
+    margin-left: 10.5rem;
+  }
 }
 
 @media (min-width: 1400px) {
+  .left-btm {
+    margin-left: -64rem;
+    margin-top: 6rem;
+  }
+
+  .right-btm {
+    margin-left: 30rem;
+    margin-top: 5rem;
+  }
+
+  .right-outer {
+    margin-left: 31.5rem;
+    margin-top: 6rem;
+  }
+
+  .right-up {
+    margin-left: 62rem;
+    margin-top: -9.5rem;
+  }
+
   .game-outer-div {
     height: 29rem;
   }
@@ -833,9 +934,44 @@ footer {
   .earn-txt {
     font-size: 8rem;
   }
+
+  .port-text h2 {
+    font-size: 2.3rem;
+    margin-left: 5rem;
+    margin-right: 5rem;
+  }
 }
 
 @media (min-width: 1500px) {
+  .left-btm {
+    margin-left: -69rem;
+    margin-top: 7rem;
+  }
+
+  .right-btm {
+    margin-left: 35rem;
+    margin-top: 6.5rem;
+  }
+
+  .right-outer {
+    margin-left: 37rem;
+    margin-top: 8rem;
+  }
+
+  .right-up {
+    margin-left: 67rem;
+    margin-top: -10rem;
+  }
+
+  .side-line {
+    height: 80px;
+    width: 10px;
+  }
+
+  .fantasy {
+    width: 40rem;
+  }
+
   #gm-car {
     margin-top: -80px;
   }
@@ -863,11 +999,44 @@ footer {
   .div3 {
     margin-left: -180px;
   }
+
+  .port-text {
+    margin-left: 11rem;
+    margin-top: 8.6rem;
+  }
+
+  .port-text h2 {
+    font-size: 2.6rem;
+    margin-left: 6rem;
+    margin-right: 6rem;
+  }
 }
 
 @media (min-width: 1590px) {
   #gm-car {
     margin-top: -110px;
+  }
+}
+
+@media(min-width:1600px) {
+  .left-btm {
+    margin-left: -74rem;
+    margin-top: 8rem;
+  }
+
+  .right-btm {
+    margin-left: 39.3rem;
+    margin-top: 6.5rem;
+  }
+
+  .right-outer {
+    margin-left: 41.5rem;
+    margin-top: 9rem;
+  }
+
+  .right-up {
+    margin-left: 69rem;
+    margin-top: -7.8rem;
   }
 }
 
@@ -890,6 +1059,26 @@ footer {
 }
 
 @media (min-width: 1710px) {
+  .left-btm {
+    margin-left: -80rem;
+    margin-top: 8.5rem;
+  }
+
+  .right-btm {
+    margin-left: 45rem;
+    margin-top: 7.5rem;
+  }
+
+  .right-outer {
+    margin-left: 47rem;
+    margin-top: 9rem;
+  }
+
+  .right-up {
+    margin-left: 75rem;
+    margin-top: -9rem;
+  }
+
   #gm-car {
     margin-top: -150px;
   }
@@ -901,6 +1090,22 @@ footer {
   .pp-shift {
     margin-left: 11rem;
   }
+
+  .port h1 {
+    font-size: 18rem;
+    margin-top: -3rem;
+  }
+
+  .port-text {
+    margin-top: 10rem;
+  }
+
+  .port-text h2 {
+    margin-top: -8.6rem;
+    font-size: 3.4rem;
+    margin-left: 8rem;
+    margin-right: 8rem;
+  }
 }
 
 @media (min-width: 1790px) {
@@ -909,7 +1114,49 @@ footer {
   }
 }
 
+@media (min-width:1800px) {
+  .left-btm {
+    margin-left: -84.5rem;
+    margin-top: 9.5rem;
+  }
 
+  .right-btm {
+    margin-left: 50rem;
+    margin-top: 9rem;
+  }
+
+  .right-outer {
+    margin-left: 52rem;
+    margin-top: 11rem;
+  }
+
+  .right-up {
+    margin-left: 79rem;
+    margin-top: -9.5rem;
+  }
+}
+
+@media(max-width:1300px) {
+  .left-btm {
+    margin-left: -59rem;
+    margin-top: 5.3rem;
+  }
+
+  .right-btm {
+    margin-left: 24.5rem;
+    margin-top: 4.3rem;
+  }
+
+  .right-outer {
+    margin-left: 26rem;
+    margin-top: 5.5rem;
+  }
+
+  .right-up {
+    margin-left: 56.5rem;
+    margin-top: -8rem;
+  }
+}
 
 @media (max-width: 1280px) {
   #game-section {
@@ -933,6 +1180,27 @@ footer {
 }
 
 @media (max-width: 1250px) {
+
+  .left-btm {
+    margin-left: -56.5rem;
+    margin-top: 5rem;
+  }
+
+  .right-btm {
+    margin-left: 22.5rem;
+    margin-top: 4rem;
+  }
+
+  .right-outer {
+    margin-left: 24rem;
+    margin-top: 5rem;
+  }
+
+  .right-up {
+    margin-left: 54.5rem;
+    margin-top: -7.5rem;
+  }
+
   #game-content-box {
     margin-top: 50px;
   }
@@ -958,6 +1226,11 @@ footer {
 
   /* ---------Portfolio Section------------ */
   /* Download Card */
+
+  .download-options2 {
+    height: 50px;
+  }
+
   #download-card {
     top: -45px;
   }
@@ -985,6 +1258,53 @@ footer {
   /* Porfolio Content */
   #filler {
     height: 180px;
+  }
+
+  .right-up {
+    height: 2.5rem;
+    width: 9rem;
+    position: absolute;
+    margin-left: 52rem;
+    margin-top: -8rem;
+    border-style: solid solid none none;
+    border-color: white;
+    border-width: 1px;
+    /* border-radius: 8px; */
+    border-top-right-radius: 8px 8px;
+    background-color: transparent;
+  }
+
+  .left-btm {
+    height: 5rem;
+    width: 7rem;
+    position: absolute;
+    margin-left: -54rem;
+    margin-top: 5.2rem;
+    border-style: none none solid solid;
+    border-color: red;
+    border-width: 1px;
+    /* border-radius: 8px; */
+    border-bottom-left-radius: 8px 8px;
+    background-color: transparent;
+  }
+
+  .right-btm {
+    height: 5.7rem;
+    width: 41rem;
+    position: absolute;
+    margin-left: 20rem;
+    margin-top: 4.5rem;
+    border-style: none solid solid none;
+    border-color: red;
+    border-width: 1px;
+    /* border-radius: 8px; */
+    border-bottom-right-radius: 8px 8px;
+    background-color: transparent;
+  }
+
+  .right-outer {
+    margin-left: 22rem;
+    margin-top: 6rem;
   }
 
   .up-div {
